--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <artifactId>thymeleaf</artifactId>
             <version>3.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.4.8-jre</version> </dependency>
     </dependencies>
 
     <build>
