--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,8 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>33.4.8-jre</version> </dependency>
+            <version>33.4.8-jre</version>
+        </dependency>
     </dependencies>
 
     <build>
